--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECommerce (carrito)</title>
+    <title>ECommerce-primer desafio</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/carrito.css">
 </head>
