--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
     </footer>
 
     <script src="js/productos.js"></script>
+    
     <script src="js/inicio.js"></script>
+    <script src="js/alta.js"></script>
+    <script src="js/carrito.js"></script>
+    <script src="js/contacto.js"></script>
+    <script src="js/nosotros.js"></script>
+    <script src="js/otra.js"></script>
+    
     <script src="js/main.js"></script>
 
 </body>
