se genero una nueva carpeta agregando todos los archivos html menos index.html

--- a/Plantillas/contacto.html
+++ b/Plantillas/contacto.html
@@ -1,129 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECommerce-primer desafio</title>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/contacto.css">
-</head>
-<body>
-    
-    <header>
-        <nav>
-            <ul>
-                <li> <a href="./index.html">Inicio</a> </li>
-                <li> <a href="./alta.html">Alta</a> </li>
-                <li> <a href="./carrito.html">Carrito</a> </li>
-                <li> <a href="./contacto.html">Contacto</a> </li>
-                <li> <a href="./nosotros.html">Nosotros</a> </li>
-                <li> <a href="./otra.html">Otra</a> </li>
-            </ul>
-        </nav>
-        <div>
-            <div id="logo"><img src="../img/images.jpeg"></div>
-            <div id="barra-busqueda">
-                <form action="#">
-                    <label for="buscar">Buscar</label>
-                    <input type="text">
-                    <input type="submit" value="Buscar">
-                </form>
-            </div>
-            <div id="boton-carrito"><img src="../img/carrito.png" ></div>
-        </div>
-    </header>
 
-    <main>
-        <h1>Contacto</h1>
 
-<section class="contacto-empresa">
-  <h2>Contactate con el centro de atención al cliente</h2>
-  <p>Por favor, elegí el motivo y uno de nuestros agentes se pondrá en contacto para resolver tu consulta.</p>
-
-  <form class="motivos" id="form-motivo">
-    <fieldset>
-      <legend>¿Cuál es el motivo de tu consulta?</legend>
-
-      <label class="radio">
-        <input type="radio" name="motivo" value="cuenta"> Problemas con mi cuenta o registro
-      </label>
-      <label class="radio">
-        <input type="radio" name="motivo" value="pagos"> Medios de pago y promociones
-      </label>
-      <label class="radio">
-        <input type="radio" name="motivo" value="productos"> Productos y talles
-      </label>
-      <label class="radio">
-        <input type="radio" name="motivo" value="cambios"> Cambio o devolución
-      </label>
-      <label class="radio">
-        <input type="radio" name="motivo" value="envios"> Envíos y seguimiento
-      </label>
-      <label class="radio">
-        <input type="radio" name="motivo" value="otros"> Otras consultas
-      </label>
-    </fieldset>
-
-    <button type="button" id="btn-continuar" class="btn">Continuar</button>
-  </form>
-</section>
-
-<section id="contact-form-section" class="card hidden">
-  <h2>Envíanos tu consulta</h2>
-  <form class="contacto-form" onsubmit="return true">
-    <div class="input-group">
-      <label for="nombre">Nombre</label>
-      <input id="nombre" name="nombre" type="text" required minlength="3" maxlength="40">
-    </div>
-
-    <div class="input-group">
-      <label for="email">E-mail</label>
-      <input id="email" name="email" type="email" required>
-    </div>
-
-    <div class="input-group">
-      <label for="comentarios">Comentarios</label>
-      <textarea id="comentarios" name="comentarios" rows="6" required minlength="10" maxlength="300"></textarea>
-    </div>
-
-    <button type="submit" class="btn">Enviar</button>
-  </form>
-</section>
-
-<div class="info-contacto">
-      <p><strong>📧 Correo:</strong> contacto@tuempresa.com</p>
-      <p><strong>📞 Teléfono:</strong> +54 11 1234-5678</p>
-      <p><strong>📷 Instagram:</strong>
-        <a href="https://instagram.com/tuempresa" target="_blank">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" 
-               alt="Instagram" class="icono-instagram">
-          @tuempresa
-        </a>
-      </p>
+<main class="contacto">
+  <h1>Formulario de Contacto</h1>
 </div>
-
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-col">
-      <h4>ECommerce</h4>
-      <p>© 2025 — Todos los derechos reservados</p>
-    </div>
-    <div class="footer-col">
-      <ul>
-        <li><a href="./nosotros.html">Nosotros</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="./alta.html">Alta de productos</a></li>
-      </ul>
-    </div>
-    <div class="footer-col">
-      <p><strong>Dirección:</strong> Av. Siempre Viva 123, CABA</p>
-      <p><strong>CUIT:</strong> 30-12345678-9</p>
-    </div>
-  </footer>
-
-    <script src="js/contacto.js"></script>
-    <script src="js/main.js"></script>
-
-</body>
-</html>
