--- a/Plantillas/nosotros.html
+++ b/Plantillas/nosotros.html
@@ -1,90 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECommerce-primer desafio</title>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/nosotros.css">
-</head>
-<body>
 
-    
-  <header>
-    <nav>
-      <ul>
-        <li> <a href="./index.html">Inicio</a> </li>
-        <li> <a href="./alta.html">Alta</a> </li>
-        <li> <a href="./carrito.html">Carrito</a> </li>
-        <li> <a href="./contacto.html">Contacto</a> </li>
-        <li> <a href="./nosotros.html">Nosotros</a> </li>
-        <li> <a href="./otra.html">Otra</a> </li>
-      </ul>
-    </nav>
-    <div>
-    <div id="logo"><img src="../img/images.jpeg" ></div>
-    <div id="barra-busqueda">
-      <form action="#">
-        <label for="buscar">Buscar</label>
-        <input type="text">
-        <input type="submit" value="Buscar">
-      </form>
-    </div>
-    <div id="boton-carrito"><img src="../img/carrito.png" ></div>
-    </div>
-  </header>
 
-  <main class="nosotros-container">
-    <section class="nosotros-info">
+  <div class="nosotros">
+   
       <h1>Quiénes somos</h1>
       <p>Somos Tienda libre, un equipo comprometido en ofrecer productos de calidad, precios justos y un servicio excepcional. Buscamos que cada cliente disfrute de una experiencia de compra fácil, rápida y segura.</p>
       <p>Contamos con una amplia variedad de productos y trabajamos día a día para seguir creciendo y mejorando. Nuestro compromiso es con vos, para que siempre tengas lo que buscás.</p>
-    </section>
-
-    <section class="nosotros-img">
-      <img src="../img/equipo-trab.jpeg" alt="Nuestro equipo">
-    </section>
-
-    <section class="valores-container">
-      <h2>Propósito y valores</h2>
-    <div class="valores-items">
-    <div class="valor">
-      <h3>Compromiso</h3>
-      <p>Nos esforzamos por cumplir nuestras promesas y ofrecer siempre el mejor servicio.</p>
-    </div>
-    <div class="valor">
-      <h3>Calidad</h3>
-      <p>Seleccionamos cuidadosamente cada producto para garantizar la satisfacción de nuestros clientes.</p>
-    </div>
-    <div class="valor">
-      <h3>Innovación</h3>
-      <p>Buscamos mejorar continuamente nuestros procesos y ofrecer nuevas soluciones.</p>
-    </div>
-    </section>
-
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-col">
-      <h4>ECommerce</h4>
-      <p>© 2025 — Todos los derechos reservados</p>
-    </div>
-    <div class="footer-col">
-      <ul>
-        <li><a href="./nosotros.html">Nosotros</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="./alta.html">Alta de productos</a></li>
-      </ul>
-    </div>
-    <div class="footer-col">
-        <p><strong>Dirección:</strong> Av. Siempre Viva 123, CABA</p>
-        <p><strong>CUIT:</strong> 30-12345678-9</p>
-    </div>
-  </footer>
-
-
-    <script src="js/nosotros.js"></script>
-    <script src="js/main.js"></script>
-
-</body>
-</html>
+  </div>
