--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
         </div>
     </header>
 
-    <main>
-        <div class="section-cards">
-            <div class="section-cards-header">
-                <h1>Listado de Productos</h1>
-            </div>    
-
-            <div class="section-cards-body"></div>
-        </div>
-    </main>
+    <main></main>
 
     
     <footer class="site-footer">
