--- a/Plantillas/alta.html
+++ b/Plantillas/alta.html
@@ -1,39 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECommerce-primer desafio</title>
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/alta.css">
-</head>
-<body>
-    
-    <header>
-        <nav>
-            <ul>
-                <li> <a href="./index.html">Inicio</a> </li>
-                <li> <a href="./alta.html">Alta</a> </li>
-                <li> <a href="./carrito.html">Carrito</a> </li>
-                <li> <a href="./contacto.html">Contacto</a> </li>
-                <li> <a href="./nosotros.html">Nosotros</a> </li>
-                <li> <a href="./otra.html">Otra</a> </li>
-            </ul>
-        </nav>
-        <div>
-            <div id="logo"><img src="../img/images.jpeg" ></div>
-            <div id="barra-busqueda">
-                <form action="#">
-                    <label for="buscar">Buscar</label>
-                    <input type="text">
-                    <input type="submit" value="Buscar">
-                </form>
-            </div>
-            <div id="boton-carrito"><img src="../img/carrito.png" ></div>
-        </div>
-    </header>
 
-    <main>
+
+    <div class="alta">
         <h1>Alta de productos</h1>
 
         <form onsubmit="agregar(event)" class="alta-form">
@@ -104,29 +71,6 @@
 
         <h2>Lista de productos disponibles</h2>
         <table></table>
-    </main>
+    </div>
 
-    <footer class="site-footer">
-        <div class="footer-col">
-            <h4>ECommerce</h4>
-            <p>© 2025 — Todos los derechos reservados</p>
-        </div>
-        <div class="footer-col">
-        <ul>
-        <li><a href="./nosotros.html">Nosotros</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="./alta.html">Alta de productos</a></li>
-        </ul>
-        </div>
-        <div class="footer-col">
-            <p><strong>Dirección:</strong> Av. Siempre Viva 123, CABA</p>
-            <p><strong>CUIT:</strong> 30-12345678-9</p>
-        </div>
-    </footer>
-
-    <script src="js/productos.js"></script>
-    <script src="js/alta.js"></script>
-    <script src="js/main.js"></script>
-
-</body>
-</html>
+    
