--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECommerce-primer desafio</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <!-- ........................................ -->
     <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="css/alta.css">
+    <link rel="stylesheet" href="css/carrito.css">
+    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="css/nosotros.css">
+    <link rel="stylesheet" href="css/otra.css">
 </head>
 
 <body>
@@ -13,6 +19,7 @@
     <header>
         <nav>
             <ul>
+                
                 <li> <a href="./index.html">Inicio</a> </li>
                 <li> <a href="./alta.html">Alta</a> </li>
                 <li> <a href="./carrito.html">Carrito</a> </li>
