terminando detalles del index y JS del main para que funcione bien la pagina en la web

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <nav>
             <ul>
                 
-                <li> <a href="./index.html">Inicio</a> </li>
-                <li> <a href="./alta.html">Alta</a> </li>
-                <li> <a href="./carrito.html">Carrito</a> </li>
-                <li> <a href="./contacto.html">Contacto</a> </li>
-                <li> <a href="./nosotros.html">Nosotros</a> </li>
-                <li> <a href="./otra.html">Otra</a> </li>
+                 <li> <a href="" id="inicio">Inicio</a> </li>
+                <li> <a href="" id="alta">Alta</a> </li>
+                <li> <a href="" id="carrito" >Carrito</a> </li>
+                <li> <a href="" id="contacto">Contacto</a> </li>
+                <li> <a href="" id="nosotros">Nosotros</a> </li>
+                <li> <a href="" id="otra">Otra</a> </li>
             </ul>
         </nav>
         <div>
