Recurso generado en Mockapi para pedir los productos a esa url remota

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
     <script src="js/productos.js"></script>
     
+    <script src="js/servicioProductos.js"></script>
+
     <script src="js/inicio.js"></script>
     <script src="js/alta.js"></script>
     <script src="js/carrito.js"></script>
