generando estado protegido con funciones en JS avanzado con la creacion de modulos

--- a/Plantillas/alta.html
+++ b/Plantillas/alta.html
@@ -3,7 +3,7 @@
     <div class="alta">
         <h1>Alta de productos</h1>
 
-        <form onsubmit="agregar(event)" class="alta-form">
+        <form class="alta-form">
             <div class="input-group">
                 <label for="nombre">Nombre</label>
                 <input id="nombre" type="text" name="nombre">
