--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
        </div>
     </footer>
 
-    <script src="js/productos.js"></script>
+    <script type="module" src="js/productosMem.js"></script>
     
-    <script src="js/servicioProductos.js"></script>
+    <script type="module" src="js/servicioProductos.js"></script>
 
-    <script src="js/inicio.js"></script>
-    <script src="js/alta.js"></script>
-    <script src="js/carrito.js"></script>
-    <script src="js/contacto.js"></script>
-    <script src="js/nosotros.js"></script>
-    <script src="js/otra.js"></script>
+    <script type="module" src="js/inicio.js"></script>
+    <script type="module" src="js/alta.js"></script>
+    <script type="module" src="js/carrito.js"></script>
+    <script type="module" src="js/contacto.js"></script>
+    <script type="module" src="js/nosotros.js"></script>
+    <script type="module" src="js/otra.js"></script>
     
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 
 </body>
 </html>
