generando un servicio para consumir una api rest

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
        </div>
     </footer>
 
-    <script type="module" src="js/productosMem.js"></script>
+    <!-- <script type="module" src="js/productosMem.js"></script> -->
     
-    <script type="module" src="js/servicioProductos.js"></script>
+    <!-- <script type="module" src="js/servicioProductos.js"></script> -->
 
-    <script type="module" src="js/inicio.js"></script>
+    <!-- <script type="module" src="js/inicio.js"></script>
     <script type="module" src="js/alta.js"></script>
     <script type="module" src="js/carrito.js"></script>
     <script type="module" src="js/contacto.js"></script>
     <script type="module" src="js/nosotros.js"></script>
-    <script type="module" src="js/otra.js"></script>
+    <script type="module" src="js/otra.js"></script> -->
     
     <script type="module" src="js/main.js"></script>
 
