--- a/Plantillas/alta.html
+++ b/Plantillas/alta.html
@@ -64,7 +64,7 @@
                 <input id="foto" type="text" name="foto">
             </div>
 
-            <button type="submit">Agregar</button>
+            <button >Agregar</button>
         </form>
 
         <hr>
