se armo el carrito de compras generando botones de borrar y editar para poder generar cambios desde el carrito de compras y se hizo dos archivos mas en JS relacionado al carritp de compras

--- a/Plantillas/carrito.html
+++ b/Plantillas/carrito.html
@@ -2,5 +2,11 @@
 
     <div class="carrito">
         <h1>Carrito de Compras</h1>
+        <br> <br>
+
+        <button class="carrito-borrar-pedir" id="carrito-borrar">Borrar</button>
+        <table></table>
+        <button class="carrito-borrar-pedir" id="carrito-pedir">pedir</button>
+    </div>
     </div>
 
